# BigBird

./: .gitignore  CMakeLists.txt  LICENSE  README.MD  README_CN.MD  config.yaml
include/: Camera.hpp  CornerData.hpp  Graph.hpp
scripts/: detect_corners.bash  solve_param.bash
src/: Camera.cpp  DetectCorner.cpp  Graph.cpp  SolveParam.cpp
